# tomarklibdev

./: CMakeLists.txt  Caller.cpp  LICENSE  README.md
assets/: emoji-test.txt
include/: EmojiTools.hpp  ToMarkLibrary.hpp  Utf8Tools.hpp  hlog.hpp
src/: EmojiTools.cpp  ToMarkLibrary.cpp  Utf8Tools.cpp
